<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:background="@color/whiteColor"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/screen_left"
        android:paddingRight="@dimen/screen_right">

        <ImageView
            android:id="@+id/topBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/fanhui_btn" />

        <LinearLayout
            style="@style/layoutViewStyle_EditBk"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sousuo_icn" />

            <EditText
                android:id="@+id/searchEt"
                style="@style/editViewStyle"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="搜索关键字" />

        </LinearLayout>

        <TextView
            android:visibility="invisible"
            android:id="@+id/searchTv"
            style="@style/deepFont_12"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/search_bt_bk"
            android:gravity="center"
            android:text="搜索" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ac_iv_search_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ac_search_loading"
                android:visibility="gone"/>
            <LinearLayout
                android:id="@+id/ac_ll_filter_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/ac_ll_filtered_friend_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <TextView
                        style="@style/ac_search_list_view_item"
                        android:text="@string/ac_search_friend"/>
                    <View
                        style="@style/ac_search_list_view_divider" />
                    <com.qttx.kedouhulian.weight.NestedListView
                        android:id="@+id/ac_lv_filtered_friends_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                    <LinearLayout
                        android:id="@+id/ac_ll_more_friends"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="14dp"
                        android:gravity="center_vertical"
                        android:background="#ffffff">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ac_search_blue_icon"
                            android:layout_marginRight="8dp"/>
                        <TextView
                            style="@style/ac_search_list_view_item_more"
                            android:text="@string/ac_search_more_friend"/>
                    </LinearLayout>
                    <View
                        style="@style/ac_search_part_divider_high"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ac_ll_filtered_group_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <TextView
                        style="@style/ac_search_list_view_item"
                        android:text="@string/ac_search_group"/>
                    <View
                        style="@style/ac_search_list_view_divider" />
                    <com.qttx.kedouhulian.weight.NestedListView
                        android:id="@+id/ac_lv_filtered_groups_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                    <LinearLayout
                        android:id="@+id/ac_ll_more_groups"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="14dp"
                        android:gravity="center_vertical"
                        android:background="#ffffff">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ac_search_blue_icon"
                            android:layout_marginRight="8dp"/>
                        <TextView
                            style="@style/ac_search_list_view_item_more"
                            android:text="@string/ac_search_more_group" />
                    </LinearLayout>
                    <View
                        style="@style/ac_search_part_divider_high"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ac_ll_filtered_chatting_records_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <TextView
                        style="@style/ac_search_list_view_item"
                        android:text="@string/ac_search_chatting_records"/>
                    <View
                        style="@style/ac_search_list_view_divider"/>
                    <com.qttx.kedouhulian.weight.NestedListView
                        android:id="@+id/ac_lv_filtered_chatting_records_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/ac_ll_more_chatting_records"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="14dp"
                        android:gravity="center_vertical"
                        android:background="#ffffff">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ac_search_blue_icon"
                            android:layout_marginRight="8dp"/>
                        <TextView
                            style="@style/ac_search_list_view_item_more"
                            android:text="@string/ac_search_more_chatting_records" />
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:id="@+id/ac_tv_search_no_results"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="45dp"
                    android:visibility="gone"
                    android:maxLines="1"
                    android:ellipsize="middle"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:textSize="14sp"
                    android:textColor="#999999"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
